Create /holidays endpoint with the mock data for employees and holidays